[package]
name = "lepet-ext"
version = "0.1.0"
edition = "2021"

[lib]
name = "lepet_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3-ffi = { version = "0.22.1", features = ["extension-module"] }
pyo3 = { version = "0.22.1", features = ["extension-module"] }
libc = "*"
thread_local = "*"

[profile.release]
opt-level = 3
